@@ -18,8 +18,21 @@ public class CreateThreadMain {
 
     /**
      * Tests Thread.startVirtualThread(Runnable) method
+     * COMMENTED OUT: Not in the original list of 20 methods
      */
-    public static void startVirtualThread() {
-        Thread.startVirtualThread(new IllegalThread());
+    // public static void startVirtualThread() {
+    //     Thread.startVirtualThread(new IllegalThread());
+    // }
+
+    /**
+     * Tests Thread.notify() method
+     */
+    public static void notifyThread() {
+        IllegalThread illegalThread = new IllegalThread();
+        Thread thread = new Thread(illegalThread);
+        synchronized (illegalThread) {
+            thread.start();
+            illegalThread.notify();
+        }
     }
 }
